[CI] Helm Chart Update openobserve

--- a/argocd-helm-charts/openobserve/charts/openobserve/templates/alertmanager-deployment.yaml
+++ b/argocd-helm-charts/openobserve/charts/openobserve/templates/alertmanager-deployment.yaml
@@ -66,7 +66,7 @@ spec:
               containerPort: {{ .Values.config.ZO_HTTP_PORT }}
             - name: grpc
               containerPort: {{ .Values.config.ZO_GRPC_PORT }}
-            - name: report-server
+            - name: reportserver
               containerPort: {{ .Values.config.ZO_REPORT_SERVER_HTTP_PORT }}
           {{- if .Values.probes.alertmanager.enabled }}
           livenessProbe:
