--- a/argocd-helm-charts/openobserve/charts/openobserve/templates/secret.yaml
+++ b/argocd-helm-charts/openobserve/charts/openobserve/templates/secret.yaml
@@ -8,6 +8,8 @@ type: Opaque
 stringData:
   ZO_ROOT_USER_EMAIL: "{{ .Values.auth.ZO_ROOT_USER_EMAIL }}"
   ZO_ROOT_USER_PASSWORD: "{{ .Values.auth.ZO_ROOT_USER_PASSWORD }}"
+  ZO_REPORT_USER_EMAIL: "{{ .Values.auth.ZO_ROOT_USER_EMAIL }}"
+  ZO_REPORT_USER_PASSWORD: "{{ .Values.auth.ZO_ROOT_USER_PASSWORD }}"
   {{- if not .Values.minio.enabled }}
   ZO_S3_ACCESS_KEY: "{{ .Values.auth.ZO_S3_ACCESS_KEY }}"
   {{- else }}
