--- a/argocd-helm-charts/openobserve/charts/openobserve-standalone/values.yaml
+++ b/argocd-helm-charts/openobserve/charts/openobserve-standalone/values.yaml
@@ -6,7 +6,7 @@ image:
   repository: public.ecr.aws/zinclabs/openobserve
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "v0.13.1"
+  tag: "v0.13.2-rc1"
 
 imagePullSecrets: []
 nameOverride: ""
