--- a/argocd-helm-charts/reloader/charts/reloader/values.yaml
+++ b/argocd-helm-charts/reloader/charts/reloader/values.yaml
@@ -3,6 +3,7 @@ global:
   ## Reference to one or more secrets to be used when pulling images
   ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
   ##
+  imageRegistry: ""
   imagePullSecrets: []
 
 kubernetes:
@@ -24,7 +25,8 @@ reloader:
   ignoreNamespaces: "" # Comma separated list of namespaces to ignore
   namespaceSelector: "" # Comma separated list of k8s label selectors for namespaces selection
   resourceLabelSelector: "" # Comma separated list of k8s label selectors for configmap/secret selection
-  logFormat: "" #json
+  logFormat: "" # json
+  logLevel: info # Log level to use (trace, debug, info, warning, error, fatal and panic)
   watchGlobally: true
   # Set to true to enable leadership election allowing you to run multiple replicas
   enableHA: false
@@ -92,10 +94,11 @@ reloader:
     labels:
       provider: stakater
       group: com.stakater.platform
-      version: v1.1.0
+      version: v1.2.0
     image:
       name: ghcr.io/stakater/reloader
-      tag: v1.1.0
+      base: stakater/reloader
+      tag: v1.2.0
       pullPolicy: IfNotPresent
     # Support for extra environment variables.
     env:
@@ -153,6 +156,7 @@ reloader:
     gomemlimitOverride: ""
 
   service: {}
+
     # labels: {}
     # annotations: {}
     # port: 9090
