--- a/argocd-helm-charts/prometheus-linuxaid/rules/domain.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/rules/domain.yaml
@@ -9,5 +9,5 @@ groups:
         severity: critical
         alert_id: monitor::domains::status
       annotations:
-        summary: "For server **{{ $labels.certname }}**,this **{{ $labels.domain }}** domain is down"
+        summary: "For server **{{ $labels.certname }}** this **{{ $labels.domain }}** domain is down"
         description: Domain {{ $labels.domain }} is down for certname {{ $labels.certname }}. Please fix this.
