--- a/argocd-helm-charts/prometheus-linuxaid/tests/domain.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/tests/domain.yaml
@@ -24,5 +24,5 @@ tests:
               alert_id: monitor::domains::status
               domain: example.com
             exp_annotations:
-              summary: "For server **dev01.example**,this **example.com** domain is down"
+              summary: "For server **dev01.example** this **example.com** domain is down"
               description: Domain example.com is down for certname dev01.example. Please fix this.
