add mixtool in kubeai ci docker image

--- a/.gitea/Dockerfile
+++ b/.gitea/Dockerfile
@@ -21,6 +21,7 @@ RUN go install github.com/jsonnet-bundler/jsonnet-bundler/cmd/jb@v0.5.1
 RUN go install github.com/brancz/gojsontoyaml@latest
 RUN go install github.com/google/go-jsonnet/cmd/jsonnet@v0.20.0
 RUN go install github.com/google/go-jsonnet/cmd/jsonnetfmt@latest
+RUN go install github.com/monitoring-mixins/mixtool/cmd/mixtool@main
 
 # helm
 RUN curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
