Fix netpol for cert-manager to allow prometheus scrapes
https://gitea.obmondo.com/EnableIT/rufvpto91t/issues/2010

--- a/argocd-helm-charts/cert-manager/templates/netpol-default.yaml
+++ b/argocd-helm-charts/cert-manager/templates/netpol-default.yaml
@@ -14,7 +14,7 @@ spec:
     protocol: TCP
     source:
       namespaceSelector: projectcalico.org/name == 'monitoring'
-      selector: name == prometheus
+      selector: app.kubernetes.io/name == 'prometheus'
     destination:
       ports:
       - 9402
