--- a/argocd-helm-charts/aws-efs-csi-driver/charts/aws-efs-csi-driver/templates/node-serviceaccount.yaml
+++ b/argocd-helm-charts/aws-efs-csi-driver/charts/aws-efs-csi-driver/templates/node-serviceaccount.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ .Values.node.serviceAccount.name }}
+  namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/name: {{ include "aws-efs-csi-driver.name" . }}
   {{- with .Values.node.serviceAccount.annotations }}
