--- a/argocd-helm-charts/fluent-bit/charts/fluent-bit/Chart.yaml
+++ b/argocd-helm-charts/fluent-bit/charts/fluent-bit/Chart.yaml
@@ -1,9 +1,9 @@
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Updated configmap-reload image to v0.14.0"
+      description: "Updated Fluent Bit OCI image to v3.2.2."
 apiVersion: v1
-appVersion: 3.2.1
+appVersion: 3.2.2
 description: Fast and lightweight log processor and forwarder or Linux, OSX and BSD
   family operating systems.
 home: https://fluentbit.io/
@@ -24,4 +24,4 @@ maintainers:
 name: fluent-bit
 sources:
 - https://github.com/fluent/fluent-bit/
-version: 0.48.1
+version: 0.48.3
