--- a/argocd-helm-charts/openobserve/charts/openobserve/templates/secret.yaml
+++ b/argocd-helm-charts/openobserve/charts/openobserve/templates/secret.yaml
@@ -54,3 +54,6 @@ stringData:
   {{- else }}
   ZO_RUM_CLIENT_TOKEN: "{{ .Values.config.ZO_RUM_CLIENT_TOKEN }}"
   {{- end }}
+  ZO_SMTP_USER_NAME: "{{ .Values.auth.ZO_SMTP_USER_NAME }}"
+  ZO_SMTP_PASSWORD: "{{ .Values.auth.ZO_SMTP_PASSWORD }}"
+
